Stop right hand search sidebar from overflowing.

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -3,6 +3,7 @@
 
   .eightcol {
     border-right: 1px dashed #aaa;
+    margin-right: -1px;
   }
 }
 
